--- a/CSYT/App.xaml
+++ b/CSYT/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="CSYT_CefSharp.App"
+﻿<Application x:Class="CSYT.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CSYT_CefSharp"
+             xmlns:local="clr-namespace:CSYT"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
