--- a/CSYT/MainWindow.xaml
+++ b/CSYT/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="CSYT_CefSharp.MainWindow"
+﻿<Window x:Class="CSYT.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CSYT_CefSharp"
+        xmlns:local="clr-namespace:CSYT"
         xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
-        Title="CSYT" Height="394" Width="682" MinHeight="78" MinWidth="136" Topmost="True" Closing="W_Closed" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" Background="Black" KeyDown="Window_KeyDown" StateChanged="Window_StateChanged" MouseWheel="Window_MouseWheel">
+        Title="CSYT" Height="394" Width="682" MinHeight="78" MinWidth="136" Topmost="True" Closing="Window_Closing" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" KeyDown="Window_KeyDown" StateChanged="Window_StateChanged" MouseWheel="Window_MouseWheel" ResizeMode="NoResize">
     
     <Window.Style>
         <Style TargetType="{x:Type Window}">
@@ -27,7 +27,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Window}">
                         <Grid>
-                            <Border   Background="Black"   BorderBrush="Transparent" BorderThickness="4,4,6,6" 
+                            <Border   Background="Black" BorderBrush="Transparent" BorderThickness="4,4,6,6" 
                              CornerRadius="12">
                                 <Border.Effect>
                                     <BlurEffect  KernelType="Gaussian" Radius="12" RenderingBias="Quality" />
@@ -68,6 +68,7 @@
     </Window.Style>
 
     <Grid x:Name="Grid">
-        <cefSharp:ChromiumWebBrowser x:Name="WebBrowser" Grid.Row="0" Margin="0,0,0,0" Address="https://www.youtube.com/embed/Br7Hh3lhADk?autoplay=1&amp;modestbranding=0&amp;showinfo=0&amp;controls=0&amp;hl=pt"/>
+        <shell:Image x:Name="IMG_BG" Source="shortcuts.png" />
+        <cefSharp:ChromiumWebBrowser x:Name="WebBrowser" Grid.Row="0" Margin="0,0,0,0"/>
     </Grid>
 </Window>
