--- a/CSYT/ChangeUrl.xaml
+++ b/CSYT/ChangeUrl.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSYT"
         mc:Ignorable="d"
-        Title="Change Video" Height="78.896" Width="393.214" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="Change Video" Height="78.896" Width="393.214" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner">
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=TextBox_Url}">
         <TextBlock x:Name="TextBlock_Url" Margin="15,12" Foreground="Gray" Text="Insert Video Url..."/>
