--- a/CSYT/MainWindow.xaml
+++ b/CSYT/MainWindow.xaml
@@ -6,10 +6,22 @@
         xmlns:local="clr-namespace:CSYT"
         xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+        xmlns:tb="http://www.hardcodet.net/taskbar"
         mc:Ignorable="d"
-        Title="CSYT" AllowsTransparency="True" Background="Transparent" DataContext="{RelativeSource Self}" Width="683" Height="384" Topmost="True" Closing="Window_Closing" WindowStyle="None" KeyDown="Window_KeyDown" StateChanged="Window_StateChanged" MouseWheel="Window_MouseWheel" ResizeMode="NoResize" PreviewMouseRightButtonDown="Window_PreviewMouseRightButtonDown" PreviewMouseMove="Window_PreviewMouseMove" >
+        Title="CSYT" AllowsTransparency="True" Background="Transparent" DataContext="{RelativeSource Self}" Width="683" Height="384" Topmost="True" Closing="Window_Closing" WindowStyle="None" KeyDown="Window_KeyDown" StateChanged="Window_StateChanged" MouseWheel="Window_MouseWheel" ResizeMode="NoResize" PreviewMouseRightButtonDown="Window_PreviewMouseRightButtonDown" PreviewMouseMove="Window_PreviewMouseMove" ShowInTaskbar="False" >
 
     <Grid x:Name="Grid">
+        
+        <tb:TaskbarIcon x:Name="TaskBar" IconSource="video.ico" ToolTipText="CSYT" MenuActivation="All" >
+            <tb:TaskbarIcon.ContextMenu>
+                <ContextMenu>
+                    <MenuItem x:Name="TaskBarChangeUrl" Header="_Change Video..."></MenuItem>
+                    <MenuItem x:Name="TaskBarSettings" Header="_Settings..."></MenuItem>
+                    <MenuItem x:Name="TaskBarExit" Header="_Exit"></MenuItem>
+                </ContextMenu>
+            </tb:TaskbarIcon.ContextMenu>
+        </tb:TaskbarIcon>
+        
         <shell:Image x:Name="IMG_BG" Source="shortcuts.png" />
         <cefSharp:ChromiumWebBrowser x:Name="WebBrowser" Margin="0,0,0,0" PreviewMouseRightButtonDown="WebBrowser_RightClickOff" PreviewMouseRightButtonUp="WebBrowser_RightClickOff" />
     </Grid>
