--- a/CSYT.Setup/Product.wxs
+++ b/CSYT.Setup/Product.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Pos-Build Commands for generate file list:-->
+<!--Post-Build Commands for generate file list:-->
 <!--call "%wix%\bin\heat.exe" dir "$(SolutionDir)CSYT\bin\x86\Release\ " -var "var.CSYT.TargetDir" -ag -srd -dr INSTALLFOLDER -cg ProductComponents -template fragment -out "$(ProjectDir)Output.wxs" -v -t "$(ProjectDir)Filter.xslt"-->
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension"><?define CSYT_TargetDir=$(var.CSYT.TargetDir)?>
 	<Product Id="*" Name="CSYT 2.1" Language="1033" Version="2.1" Manufacturer="CSYT" UpgradeCode="4309cd9f-fd60-4de9-b5bc-9b1b481a91c8">
