--- a/CSYT/Settings.xaml
+++ b/CSYT/Settings.xaml
@@ -5,18 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSYT"
         mc:Ignorable="d"
-        Title="Settings" Height="228.145" Width="311.34" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="Settings" Height="276.144" Width="311.34" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
-        <GroupBox Header="Settings" HorizontalAlignment="Left" Height="145" Margin="10,10,0,0" VerticalAlignment="Top" Width="274">
+        <GroupBox x:Name="GBoxSettings" Header="Settings" HorizontalAlignment="Left" Height="186" Margin="10,10,0,0" VerticalAlignment="Top" Width="274">
             <Grid>
-                <CheckBox x:Name="ChkAutoplay" Content="Enable Autoplay" HorizontalAlignment="Left" Margin="4,12,0,0" VerticalAlignment="Top"/>
-                <CheckBox x:Name="ChkVideoInfo" Content="Show Video Info" HorizontalAlignment="Left" Margin="4,32,0,0" VerticalAlignment="Top"/>
-                <CheckBox x:Name="ChkVideoControls" Content="Enable Video Controls" HorizontalAlignment="Left" Margin="4,52,0,0" VerticalAlignment="Top"/>
-                <Label Content="Opacity:" HorizontalAlignment="Left" Margin="4,72,0,0" VerticalAlignment="Top"/>
-                <Slider x:Name="SliderOpacity" Margin="0,98,0,0" Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="262" Maximum="1" Minimum="0.1" SmallChange="0" />
+                <CheckBox x:Name="ChkAutoplay" Content="Enable Autoplay" HorizontalAlignment="Left" Margin="4,54,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="ChkVideoInfo" Content="Show Video Info" HorizontalAlignment="Left" Margin="4,74,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="ChkVideoControls" Content="Enable Video Controls" HorizontalAlignment="Left" Margin="4,94,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="LblOpacity" Content="Opacity:" HorizontalAlignment="Left" Margin="4,114,0,0" VerticalAlignment="Top"/>
+                <Slider x:Name="SliderOpacity" Margin="0,140,0,0" Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="262" Maximum="1" Minimum="0.1" SmallChange="0" />
+                <Label x:Name="LblLanguage"  Content="Language:" HorizontalAlignment="Left" Margin="4,0,0,0" VerticalAlignment="Top"/>
+                <ComboBox x:Name="CBoxLanguage" HorizontalAlignment="Left" Margin="4,26,0,0" VerticalAlignment="Top" Width="120"/>
             </Grid>
         </GroupBox>
-        <Button x:Name="BtnOK" Content="OK" HorizontalAlignment="Left" Margin="129,160,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Click="BtnOK_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="209,160,0,0" VerticalAlignment="Top" Width="75" IsCancel="True"/>
+        <Button x:Name="BtnOk" Content="OK" HorizontalAlignment="Left" Margin="129,201,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Click="BtnOk_Click"/>
+        <Button x:Name="BtnCancel" Content="Cancel" HorizontalAlignment="Left" Margin="209,201,0,0" VerticalAlignment="Top" Width="75" IsCancel="True"/>
     </Grid>
 </Window>
